wip - it works, need to rebase badly

--- a/jobs/configure-eirini-bosh/templates/eirini-daemonset.yaml.erb
+++ b/jobs/configure-eirini-bosh/templates/eirini-daemonset.yaml.erb
@@ -15,6 +15,7 @@ spec:
         name: eirini-loggregator-fluentd
     spec:
       serviceAccountName: "<%= p('eirini.k8s.service_account.name') %>"
+      automountServiceAccountToken: true
       initContainers:
       - name: config-copier
         image: "<%= p('eirini.config_copier_image') %>"
